@@ -6,6 +6,7 @@ What's New for OpenJPEG
 + : added
 
 September 19, 2011
++ [mickael] Enhance some new JPIP files about opj_config inclusion and using of free/calloc (credit to Julien Malik) 
 + [mickael] WIP: begin to test opj_decode_tile_data
 + [mickael] WIP: update t1, t2, tcd to use same strut as in V2
 + [mickael] WIP: begin to test opj_read_tile_header with V2 style
